@@ -1,1 +1,3 @@
 -Xmx512m
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
